--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,38 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+:root{
+  --gris:#3d3d3d;
+  --gris2:#6f6f6f;
+  --gris3:#e1e1e1;
+  --naranja:#da552f
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+html{
+  font-size: 62.5%;
   box-sizing: border-box;
+}
+*,*:before,*:after{
+  box-sizing: inherit;
+}
+body{
+  font-size: 1.6rem;/*igual a 16px*/
+  line-height: 1.5;
+  /* background-color: var(--naranja); */
+  font-family: "PT Sans",serif;
+}
+h1,h2,h3{
+  margin: 0 0 2rem 0;
+  line-height: 1.5;
+}
+h1,h2{
+  font-family: "Robot Slab",serif;
+  font-weight: 700;
+}
+h3{
+  font-family: "PT Sans",serif;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a{
+  text-decoration: none;
 }
